[gd_scene load_steps=76 format=3 uid="uid://x6ykrgfako55"]

[ext_resource type="Script" path="res://Player.gd" id="1_0hjxu"]
[ext_resource type="Shader" path="res://Shaders/try.gdshader" id="1_e2bdd"]
[ext_resource type="Texture2D" uid="uid://d0o6wt3l5qvnh" path="res://Visuals/Animations/idle.png" id="2_7gcnw"]
[ext_resource type="Texture2D" uid="uid://cipa3sl7tn3pn" path="res://Visuals/Animations/jump.png" id="3_eegvr"]
[ext_resource type="Texture2D" uid="uid://8ogrtqyeacau" path="res://Visuals/Animations/dash.png" id="3_mm0ji"]
[ext_resource type="Texture2D" uid="uid://d0dljy5hr7kfw" path="res://Visuals/Animations/run.png" id="3_vh5n7"]
[ext_resource type="Texture2D" uid="uid://ds66jmc1spcbn" path="res://Visuals/Animations/dashattack.png" id="4_fqj8o"]
[ext_resource type="AudioStream" uid="uid://bxxpx77x21gwc" path="res://sfx/att.ogg" id="8_4nyfg"]
[ext_resource type="Texture2D" uid="uid://bgd44t1xkvm5b" path="res://Visuals/Animations/spiiin.png" id="8_82odh"]
[ext_resource type="Texture2D" uid="uid://cworrknv3pk1t" path="res://Visuals/Animations/upyogo.png" id="9_6vdwm"]
[ext_resource type="AudioStream" uid="uid://bfq24tfvd021i" path="res://sfx/jum.ogg" id="9_faxc4"]
[ext_resource type="AudioStream" uid="uid://bq4x4i3owe7nq" path="res://sfx/dash.ogg" id="10_80dqr"]
[ext_resource type="Texture2D" uid="uid://yw51ynrvhs2x" path="res://Visuals/Animations/attack.png" id="10_s5xmi"]
[ext_resource type="AudioStream" uid="uid://bo2c5u6r6783k" path="res://sfx/execute.wav" id="13_3nbuy"]
[ext_resource type="AudioStream" uid="uid://uwrak6ml7ei0" path="res://sfx/spin.wav" id="14_wh54f"]
[ext_resource type="AudioStream" uid="uid://ch5eq1crj1fc1" path="res://sfx/fly.wav" id="16_hm1w5"]
[ext_resource type="Script" path="res://Scripts/Player/Attack Range.gd" id="17_6j0n5"]
[ext_resource type="AudioStream" uid="uid://hmcomoc2gp5e" path="res://sfx/charging.wav" id="17_o0kfb"]
[ext_resource type="FontFile" uid="uid://bu4ut4acw6q7n" path="res://Silver.ttf" id="19_uhpr1"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerHealthSystem.gd" id="21_1012i"]
[ext_resource type="Texture2D" uid="uid://twt6fee3jeri" path="res://Visuals/UI/skill1normal.png" id="22_6ryig"]
[ext_resource type="Script" path="res://Scripts/Player/StaminaSystem.gd" id="22_65adt"]
[ext_resource type="Script" path="res://Skillcontainer.gd" id="22_lecu5"]
[ext_resource type="Texture2D" uid="uid://bnxrxams43yf3" path="res://Visuals/UI/skill1holdorcool.png" id="23_vl7hg"]
[ext_resource type="Theme" uid="uid://guq4b5ompm68" path="res://Themes/Sample_theme.tres" id="25_k0bfw"]
[ext_resource type="Script" path="res://Scripts/Player/Skilldamagearea.gd" id="26_1oknk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y0ewy"]
shader = ExtResource("1_e2bdd")
shader_parameter/direction = Vector2(0, 0.5)
shader_parameter/offset = null
shader_parameter/fade = null
shader_parameter/strip = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q2d0f"]
size = Vector2(16.5, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pab3p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2vt5"]
size = Vector2(5, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mur3"]
atlas = ExtResource("10_s5xmi")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bea5"]
atlas = ExtResource("10_s5xmi")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsb4h"]
atlas = ExtResource("10_s5xmi")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_17il7"]
atlas = ExtResource("10_s5xmi")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_82ivh"]
atlas = ExtResource("10_s5xmi")
region = Rect2(128, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_27wp5"]
atlas = ExtResource("10_s5xmi")
region = Rect2(160, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_631xw"]
atlas = ExtResource("3_mm0ji")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_58mg3"]
atlas = ExtResource("4_fqj8o")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ooi3"]
atlas = ExtResource("4_fqj8o")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua85w"]
atlas = ExtResource("4_fqj8o")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmptb"]
atlas = ExtResource("2_7gcnw")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8j3r"]
atlas = ExtResource("2_7gcnw")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy4sr"]
atlas = ExtResource("3_eegvr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe5kk"]
atlas = ExtResource("3_eegvr")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1b2l"]
atlas = ExtResource("3_eegvr")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xomd"]
atlas = ExtResource("3_vh5n7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsfii"]
atlas = ExtResource("3_vh5n7")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f562"]
atlas = ExtResource("3_vh5n7")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewhje"]
atlas = ExtResource("8_82odh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_miapg"]
atlas = ExtResource("8_82odh")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm13m"]
atlas = ExtResource("8_82odh")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gukv3"]
atlas = ExtResource("9_6vdwm")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_342q1"]
atlas = ExtResource("9_6vdwm")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1cna"]
atlas = ExtResource("9_6vdwm")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n453n"]
atlas = ExtResource("9_6vdwm")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkj30"]
atlas = ExtResource("9_6vdwm")
region = Rect2(128, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaeam"]
atlas = ExtResource("9_6vdwm")
region = Rect2(160, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jubc4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mur3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bea5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsb4h")
}],
"loop": false,
"name": &"attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_17il7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82ivh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27wp5")
}],
"loop": false,
"name": &"attack2",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_631xw")
}],
"loop": false,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_58mg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58mg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ooi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ooi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ooi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ooi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ooi3")
}],
"loop": false,
"name": &"dash attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua85w")
}],
"loop": false,
"name": &"dash ready",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmptb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8j3r")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy4sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe5kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1b2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1b2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1b2l")
}],
"loop": false,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xomd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsfii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f562")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewhje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miapg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm13m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewhje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miapg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm13m")
}],
"loop": false,
"name": &"spin",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gukv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_342q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1cna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n453n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkj30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaeam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaeam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaeam")
}],
"loop": false,
"name": &"upyogo",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_v7p0e"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.603922, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s37oq"]
_data = {
"hurt": SubResource("Animation_v7p0e")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_aj2rr"]
atlas = ExtResource("22_6ryig")
region = Rect2(36, 0, 36, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7gnn"]
atlas = ExtResource("23_vl7hg")
region = Rect2(36, 0, 36, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_ttwbw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj2rr")
}],
"loop": false,
"name": &"Skill1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7gnn")
}],
"loop": true,
"name": &"Skill1hold",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_f0fki"]
atlas = ExtResource("22_6ryig")
region = Rect2(108, 0, 36, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv43o"]
atlas = ExtResource("23_vl7hg")
region = Rect2(108, 0, 36, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_3134u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0fki")
}],
"loop": false,
"name": &"Skill2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv43o")
}],
"loop": true,
"name": &"Skill2hold",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xeimu"]
atlas = ExtResource("22_6ryig")
region = Rect2(0, 0, 36, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_6up35"]
atlas = ExtResource("23_vl7hg")
region = Rect2(0, 0, 36, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_pom3i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeimu")
}],
"loop": false,
"name": &"Skill3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6up35")
}],
"loop": true,
"name": &"Skill3hold",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lqsf1"]
atlas = ExtResource("22_6ryig")
region = Rect2(72, 0, 36, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_hohym"]
atlas = ExtResource("23_vl7hg")
region = Rect2(72, 0, 36, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_x2e52"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqsf1")
}],
"loop": true,
"name": &"Skill4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hohym")
}],
"loop": true,
"name": &"Skill4hold",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8oe7f"]
atlas = ExtResource("22_6ryig")
region = Rect2(144, 0, 36, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u3bw"]
atlas = ExtResource("23_vl7hg")
region = Rect2(144, 0, 36, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_bonca"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8oe7f")
}],
"loop": true,
"name": &"Jump",
"speed": 50.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u3bw")
}],
"loop": false,
"name": &"Jumphold",
"speed": 50.0
}]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("cooldown_timer") groups=["Player"]]
texture_filter = 1
texture_repeat = 1
material = SubResource("ShaderMaterial_y0ewy")
script = ExtResource("1_0hjxu")
cooldown_timer = NodePath("Timer")

[node name="Healthbar" type="ProgressBar" parent="."]
texture_filter = 1
offset_left = -216.0
offset_top = -119.0
offset_right = -63.9998
offset_bottom = -92.0001
theme_override_fonts/font = ExtResource("19_uhpr1")
theme_override_font_sizes/font_size = 19

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.4, 1.4)
position_smoothing_enabled = true
position_smoothing_speed = 150.0
drag_horizontal_enabled = true
drag_left_margin = 0.01
drag_top_margin = 0.01
drag_right_margin = 0.01
drag_bottom_margin = 0.01

[node name="PlayerSystem" type="Node" parent="."]

[node name="HealthSystem" type="Node" parent="PlayerSystem"]
script = ExtResource("21_1012i")

[node name="StaminaSystem" type="Node" parent="PlayerSystem"]
script = ExtResource("22_65adt")

[node name="Attack Range" type="Area2D" parent="." node_paths=PackedStringArray("debug")]
collision_mask = 2
script = ExtResource("17_6j0n5")
debug = NodePath("../UI/Label")

[node name="GlobalAttackRange" type="CollisionShape2D" parent="Attack Range"]
position = Vector2(-11.25, 0.5)
shape = SubResource("RectangleShape2D_q2d0f")
debug_color = Color(0.988235, 0, 0.321569, 0.419608)

[node name="Skilldamagearea" type="Area2D" parent="."]
scale = Vector2(1.22121, 1.22121)
collision_mask = 2
script = ExtResource("26_1oknk")

[node name="Skill2damagearea" type="CollisionShape2D" parent="Skilldamagearea"]
shape = SubResource("RectangleShape2D_pab3p")
debug_color = Color(0.64295, 0.523206, 0.0190725, 0.42)

[node name="SFX" type="Node2D" parent="."]

[node name="attacksfx" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("8_4nyfg")
volume_db = -3.949

[node name="jump" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("9_faxc4")

[node name="dash" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("10_80dqr")
volume_db = 13.459
pitch_scale = 1.33

[node name="execute" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("13_3nbuy")
pitch_scale = 0.88

[node name="spiiin" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("14_wh54f")

[node name="up" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("16_hm1w5")
volume_db = 9.674

[node name="charge" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("17_o0kfb")
pitch_scale = 0.68

[node name="Timer" type="Timer" parent="."]
process_callback = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_p2vt5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
sprite_frames = SubResource("SpriteFrames_jubc4")
animation = &"idle"
autoplay = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s37oq")
}

[node name="UI" type="Control" parent="."]
z_index = 10
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 60.0
offset_top = 44.0
offset_right = 100.0
offset_bottom = 84.0
scale = Vector2(0.86, 0.86)

[node name="HpandSpcontainer" type="VBoxContainer" parent="UI"]
texture_filter = 1
layout_mode = 0
offset_left = -148.837
offset_top = -79.0698
offset_right = -108.837
offset_bottom = -71.0698
scale = Vector2(1.17852, 0.49046)

[node name="HealthBar" type="TextureProgressBar" parent="UI/HpandSpcontainer"]
layout_mode = 2
nine_patch_stretch = true
tint_under = Color(0.960784, 0.733333, 1, 1)
tint_over = Color(0, 0, 0, 1)
tint_progress = Color(1, 0.733333, 0.760784, 1)

[node name="Skillcontainer" type="HBoxContainer" parent="UI"]
layout_mode = 2
offset_left = -8.13953
offset_top = 70.9302
offset_right = -7.13953
offset_bottom = 91.9302
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("22_lecu5")

[node name="Skill1" type="AnimatedSprite2D" parent="UI/Skillcontainer"]
sprite_frames = SubResource("SpriteFrames_ttwbw")
animation = &"Skill1"

[node name="Skill2" type="AnimatedSprite2D" parent="UI/Skillcontainer"]
position = Vector2(40.6977, 0)
sprite_frames = SubResource("SpriteFrames_3134u")
animation = &"Skill2"
autoplay = "Skill2"

[node name="Skill3" type="AnimatedSprite2D" parent="UI/Skillcontainer"]
position = Vector2(82.5581, 0)
sprite_frames = SubResource("SpriteFrames_pom3i")
animation = &"Skill3"
autoplay = "Skill3"

[node name="Skill4" type="AnimatedSprite2D" parent="UI/Skillcontainer"]
position = Vector2(124.419, 0)
sprite_frames = SubResource("SpriteFrames_x2e52")
animation = &"Skill4"
autoplay = "Skill4"

[node name="Jump" type="AnimatedSprite2D" parent="UI/Skillcontainer"]
position = Vector2(166.279, 1.16279)
sprite_frames = SubResource("SpriteFrames_bonca")
animation = &"Jump"

[node name="Skillkeys" type="Control" parent="UI"]
anchors_preset = 0
offset_left = -10.4651
offset_top = -5.81395
offset_right = 127.535
offset_bottom = 70.1861

[node name="Label" type="Label" parent="UI/Skillkeys"]
layout_mode = 1
offset_left = 13.0
offset_top = 50.0
offset_right = 25.0
offset_bottom = 74.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("19_uhpr1")
theme_override_font_sizes/font_size = 19
text = "Q "

[node name="Label2" type="Label" parent="UI/Skillkeys"]
layout_mode = 0
offset_left = 52.0
offset_top = 50.0
offset_right = 63.0
offset_bottom = 74.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("19_uhpr1")
theme_override_font_sizes/font_size = 19
text = "E "

[node name="Label3" type="Label" parent="UI/Skillkeys"]
layout_mode = 0
offset_left = 91.0
offset_top = 50.0
offset_right = 107.0
offset_bottom = 74.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("19_uhpr1")
theme_override_font_sizes/font_size = 19
text = "F"

[node name="Label4" type="Label" parent="UI/Skillkeys"]
layout_mode = 0
offset_left = 130.0
offset_top = 51.0
offset_right = 153.0
offset_bottom = 75.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("19_uhpr1")
theme_override_font_sizes/font_size = 19
text = " Rmb"

[node name="Jump" type="Label" parent="UI/Skillkeys"]
layout_mode = 0
offset_left = 172.0
offset_top = 51.0
offset_right = 196.0
offset_bottom = 75.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("19_uhpr1")
theme_override_font_sizes/font_size = 19
text = "Jump
"

[node name="cdnotif" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_left = -36.0465
offset_top = 31.3954
offset_right = 65.9535
offset_bottom = 59.3954
scale = Vector2(0.487145, 0.487145)
alignment = 1

[node name="Skill1" type="Label" parent="UI/cdnotif"]
layout_mode = 2
theme = ExtResource("25_k0bfw")
theme_override_fonts/font = ExtResource("19_uhpr1")
theme_override_font_sizes/font_size = 19
text = "Skill Ready"
horizontal_alignment = 1

[node name="Label" type="Label" parent="UI"]
layout_mode = 0
offset_left = -90.6977
offset_top = -89.5349
offset_right = -48.6977
offset_bottom = -65.5349
scale = Vector2(0.716597, 0.597274)
theme_override_fonts/font = ExtResource("19_uhpr1")
theme_override_font_sizes/font_size = 19

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="body_entered" from="Attack Range" to="Attack Range" method="_on_body_entered"]
[connection signal="body_exited" from="Attack Range" to="Attack Range" method="_on_body_exited"]
[connection signal="body_entered" from="Skilldamagearea" to="Skilldamagearea" method="_on_body_entered"]
[connection signal="body_exited" from="Skilldamagearea" to="Skilldamagearea" method="_on_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
